tests/idris2/error/error018/Issue1031-2.idr
%default total

foo : (x : Bool) -> x === True
foo = \ ? => Refl
